// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hmvloj ghOlBj"
    >
      * 
    </span>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI sc-gsFBvc cxFWxy kDFlQy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-lheWVM sc-cAiakp bYiXFn jBMfxQ"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      hey
       
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      hey
       
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW cgazOp"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      Hey
       
      <span
        class="sc-iqVYUh fmzOAi sc-hoHvKZ jXFvTg"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-eWfYbd jywvPE"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC jEHOMK"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC jEHOMK"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC jEHOMK"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-kTqJeW gEKXzK"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-cQMBOM iRPWnb"
      tabindex="0"
    >
      <span
        class="sc-knKKcV cyxfzZ"
      >
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-hLVYED ghvNRK"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-iqVYUh fmzOAi sc-cRKKwI cxFWxy"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-eWfYbd jywvPE"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-hLVYED ghvNRK"
    >
      : 
    </i>
    <span
      class="sc-lheWVM bYiXFn"
    >
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-oXQqu kWYkXe"
        tabindex="-1"
      >
        <span
          class="sc-hcuqqC iNnoQV"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
